[package]
name = "vu64"
version = "0.1.8"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = "variable length encode/decode for a 64-bits integer"
keywords = ["serialization", "varint", "integer"]
categories = []
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.56.0"
repository = "https://github.com/aki-akaguma/vu64"

[features]
default = ["io"]

io = []
vu64_debug = []

[dependencies]
